# ai_trade_algo_test

./: .env.example  .gitignore  new_strats.md  pyproject.toml  run_ebs_paper.py  run_optimize_v5.py  run_paper_trade.py  run_research.py  run_simplified.py  run_v4_vs_v5.py  start_trader.sh
configs/: default_config.yaml
data/: ebs_model.pkl  experiments.json
qrt/: __init__.py
qrt/alpha_engine/: __init__.py  alpha_research.py  signal_evaluator.py  signal_filter.py  signal_generator.py
qrt/backtest/: __init__.py  engine.py  portfolio.py  result.py  trade_ledger.py
reports/: ablation_report.md  ablation_results.csv  deployment_gate.md  enhanced_metrics.csv  leverage_stress_report.md  live_signals.json  order_log.json  overfitting_report.md  platform_requirements_for_strategy_research.md  regime_metrics.csv  signal_architecture_deep_research_requirements.md  simplified_deployment_gate.md  simplified_research_report.md  strategy_research_brief.md  trade_history.jsonl  trade_metrics.csv  v4_vs_v5_comparison.md  v5_optimization_sweep.md  v5_sweep_results.csv  validation_report.md
research/: RESEARCH_PROTOCOL.md  crisis_alpha_strategies.md  ftmo_backtest_report.md  options_futures_synthetic_strategies.md  research_other.md  strat_plans.md
tests/: conftest.py  test_advanced_risk.py  test_alpha_engine.py  test_backtest.py  test_costs.py  test_data_pipeline.py  test_deployment_readiness.py  test_leverage_optimizer.py  test_leverage_stress.py  test_overfitting.py  test_portfolio.py  test_portfolio_insurance.py  test_regime.py  test_strategies.py  test_strategy_pruner.py
(+101 files in other folders)
