[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "qrt"
version = "1.0.0"
description = "Quantitative Research Trading Platform"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "hmmlearn",
    "pykalman",
    "matplotlib",
    "seaborn",
    "plotly",
    "networkx",
    "pyarrow",
    "jinja2",
    "pytest",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qrt*"]
